# prot_lig_discdiff

./: .gitignore  README.md  config_protein.yaml  debug_sampling_probs.py  pyproject.toml  run_aurora.sh  run_polaris.sh  run_protein_training.sh  setup.py  test_ddp_aurora.py
configs/: config_example.yaml  config_protein.yaml
protlig_ddiff/: __init__.py
protlig_ddiff/models/: __init__.py  rotary.py  transformer_v100.py
protlig_ddiff/processing/: __init__.py  graph_lib.py  noise_lib.py  subs_loss.py
protlig_ddiff/sampling/: protein_sampling.py  sample_proteins.py  sampling.py
protlig_ddiff/tests/: __init__.py  debug_normalization.py  debug_shapes.py  debug_subs_detailed.py  debug_subs_loss.py  test_subs_integration.py  test_subs_loss_only.py
protlig_ddiff/train/: __init__.py  run_single_gpu.py  run_train_clean.py  run_train_clean_OLD.py  run_train_uniref_ddp_aurora.py
protlig_ddiff/utils/: __init__.py  config_utils.py  data_utils.py  ddp_utils.py  esm_evaluator.py  training_utils.py
readmes/: AF_UNIX_FIX_README.md  CHECKPOINT_HANGING_FIX_GUIDE.md  CONFIGURABLE_INTERVALS_GUIDE.md  CRITICAL_SAMPLING_FIX.md  DATA_SPLITS_VALIDATION_GUIDE.md  ENHANCED_SAMPLING_IMPROVEMENTS.md  ENHANCED_STOCHASTICITY_GUIDE.md  HANG_FIXES_README.md  POLARIS_SCRIPT_USAGE.md  SINGLE_GPU_USAGE.md  VALIDATION_CHECKPOINTING_GUIDE.md
running/: run_aurora.sh  run_polaris.sh
tests/: analyze_parameterization_mismatch.py  analyze_sigma_range_effects.py  analyze_training_performance.py  debug_first_batch.py  debug_hangs.py  debug_nan_issues.py  debug_sampling_wandb.py  debug_sigma_range.py  debug_training_issues.py  estimate_model_scaling.py  fix_polaris_tmpdir.sh  run_training_with_hang_detection.py  statistical_test_protein.py  test_actual_sigma_values.py  test_checkpoint_hanging_fix.py  test_complete_validation_system.py  test_config_loading.py  test_config_simple.py  test_data_splits.py  test_enhanced_sampling.py  test_enhanced_stochasticity.py  test_model_size.py  test_sampling_failure_handling.py  test_sampling_integration.py  test_sigma_rank_diversity.py  test_subs_vs_score_sampling.py  test_tokenization.py  test_training_fixes.py  test_unix_socket_fix.py  test_validation_checkpointing.py
